--- a/mm-pay/package.json
+++ b/mm-pay/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "mm-pay",
+  "version": "1.0.0",
+  "private": true,
+  "packageManager": "yarn@3.5.1",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -6,34 +10,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^48.0.7",
-    "expo-constants": "~14.2.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-gesture-handler": "~2.9.0",
+    "expo": "^48.0.16",
+    "expo-constants": "^14.2.1",
+    "expo-linking": "^4.0.1",
+    "expo-router": "1.5.3",
+    "expo-splash-screen": "^0.18.2",
+    "expo-status-bar": "^1.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.7",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-screens": "^3.20.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "eslint": "^8.39.0",
+    "prettier": "^2.8.8"
   },
   "resolutions": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
+    "metro": "^0.76.0",
+    "metro-resolver": "^0.76.0"
   },
   "overrides": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
-  },
-  "name": "mm-pay",
-  "version": "1.0.0",
-  "private": true
+    "metro": "^0.76.0",
+    "metro-resolver": "^0.76.0"
+  }
 }
