--- a/react-native/package.json
+++ b/react-native/package.json
@@ -8,12 +8,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-	    "tscheck": "tsc",
+    "tscheck": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx,js}\""
   },
   "dependencies": {
-	    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@ethersproject/units": "^5.7.0",
     "bignumber.js": "^9.1.1",
@@ -35,15 +35,16 @@
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-	"@babel/core": "^7.21.8",
+    "@babel/core": "^7.21.8",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-	"@types/react": "~18.0.27",
     "@types/node": "^18.4.0",
+    "@types/react": "~18.0.27",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
-	"eslint": "^8.39.0",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
