--- a/react-native/tsconfig.json
+++ b/react-native/tsconfig.json
@@ -10,7 +10,7 @@
     "allowJs": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./src",
+    "baseUrl": "./app",
     "paths": {
       "@*": ["./*"]
     },
