feat: added create random wallet mechanism using ethersjs

--- a/react-native/tsconfig.json
+++ b/react-native/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
@@ -10,9 +11,18 @@
     "allowJs": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./app",
+    "baseUrl": "./",
+    "importHelpers": true,
+    "jsx": "react-native",
+    "moduleResolution": "node",
     "paths": {
-      "@*": ["./*"]
+      "@app/*": ["./app/*"]
+      //   "@config": ["./config"],
+      //   "@constants": ["./constants"],
+      //   "@services": ["./services"],
+      //   "@types": ["./types"],
+      //   "@utils": ["./utils"],
+      //   "@vendor": ["./vendor"]
     },
     "incremental": true,
     "skipLibCheck": true,
@@ -22,6 +32,5 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true
-  },
-  "extends": "expo/tsconfig.base"
+  }
 }
