--- a/react-native/package.json
+++ b/react-native/package.json
@@ -13,12 +13,17 @@
     "lint": "eslint \"{app,apps,libs,test}/**/*.{ts,tsx,js}\""
   },
   "dependencies": {
+    "@ethereumjs/util": "^8.0.6",
+    "@ethersproject/abi": "^5.7.0",
     "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/keccak256": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
+    "@ethersproject/shims": "^5.7.0",
     "@ethersproject/units": "^5.7.0",
+    "@ethersproject/wallet": "^5.7.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "bignumber.js": "^9.1.1",
-    "ethereumjs-abi": "^0.6.8",
-    "ethereumjs-util": "^7.1.5",
+    "buffer": "^6.0.3",
     "expo": "^48.0.16",
     "expo-constants": "^14.2.1",
     "expo-linking": "^4.0.1",
@@ -29,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-native": "^0.71.7",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
@@ -41,13 +47,14 @@
     "@types/react": "~18.0.27",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
+    "typescript": "^4.9.4",
     "utility-types": "^3.10.0"
   },
   "resolutions": {
