--- a/react-native/package.json
+++ b/react-native/package.json
@@ -39,7 +39,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-qr-code": "^2.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
