feat: store, session persistence, updating balances, etc

--- a/react-native/package.json
+++ b/react-native/package.json
@@ -21,16 +21,22 @@
     "@ethersproject/shims": "^5.7.0",
     "@ethersproject/units": "^5.7.0",
     "@ethersproject/wallet": "^5.7.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@reduxjs/toolkit": "^1.9.5",
     "babel-plugin-module-resolver": "^5.0.0",
+    "base-64": "^1.0.0",
     "bignumber.js": "^9.1.1",
     "buffer": "^6.0.3",
     "expo": "^48.0.16",
     "expo-clipboard": "~4.1.2",
     "expo-constants": "^14.2.1",
+    "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
     "expo-linking": "^4.0.1",
+    "expo-random": "~13.1.1",
     "expo-router": "1.5.3",
     "expo-splash-screen": "^0.18.2",
+    "expo-standard-web-crypto": "^1.5.0",
     "expo-status-bar": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,16 +46,21 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-qr-code": "^2.0.11"
+    "react-qr-code": "^2.0.11",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/node": "^18.4.0",
     "@types/react": "~18.0.27",
+    "@types/react-native-get-random-values": "^1.8.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
