--- a/react-native/package.json
+++ b/react-native/package.json
@@ -29,7 +29,6 @@
     "buffer": "^6.0.3",
     "expo": "^48.0.16",
     "expo-clipboard": "~4.1.2",
-    "expo-constants": "^14.2.1",
     "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
     "expo-linking": "^4.0.1",
@@ -63,6 +62,7 @@
     "@types/react-native-get-random-values": "^1.8.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.3.0",
