--- a/react-native/package.json
+++ b/react-native/package.json
@@ -37,6 +37,7 @@
     "expo-splash-screen": "^0.18.2",
     "expo-standard-web-crypto": "^1.5.0",
     "expo-status-bar": "^1.4.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.7",
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.4.0",
     "@types/react": "~18.0.27",
     "@types/react-native-get-random-values": "^1.8.0",
