--- a/react-native/package.json
+++ b/react-native/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@ethereumjs/util": "^8.0.6",
     "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/base64": "^5.7.0",
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/keccak256": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@ethersproject/shims": "^5.7.0",
+    "@ethersproject/strings": "^5.7.0",
     "@ethersproject/units": "^5.7.0",
     "@ethersproject/wallet": "^5.7.0",
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -38,6 +40,7 @@
     "expo-standard-web-crypto": "^1.5.0",
     "expo-status-bar": "^1.4.4",
     "lodash": "^4.17.21",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.7",
