--- a/react-native/package.json
+++ b/react-native/package.json
@@ -32,6 +32,7 @@
     "base-64": "^1.0.0",
     "bignumber.js": "^9.1.1",
     "buffer": "^6.0.3",
+    "eth-delegatable-utils": "^1.1.0",
     "ethers": "^5.7.2",
     "events": "^3.3.0",
     "expo": "^48.0.16",
