--- a/react-native/package.json
+++ b/react-native/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "packageManager": "yarn@3.5.1",
-  "browser": {
-    "crypto": false
-  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,7 +10,8 @@
     "web": "expo start --web",
     "tscheck": "tsc",
     "format": "prettier --write \"app/**/*.ts\"",
-    "lint": "eslint \"{app,apps,libs,test}/**/*.{ts,tsx,js}\""
+    "lint": "eslint \"{app,apps,libs,test}/**/*.{ts,tsx,js}\"",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
@@ -28,6 +26,7 @@
     "@ethersproject/wallet": "^5.7.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tradle/react-native-http": "^2.0.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "base-64": "^1.0.0",
     "bignumber.js": "^9.1.1",
@@ -46,23 +45,29 @@
     "expo-standard-web-crypto": "^1.5.0",
     "expo-status-bar": "^1.4.4",
     "lodash": "^4.17.21",
+    "patch-package": "^7.0.0",
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.7",
+    "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-os": "^1.2.6",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-tcp": "^4.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-qr-code": "^2.0.11",
     "react-redux": "^8.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
@@ -73,6 +78,7 @@
     "@types/react-native-get-random-values": "^1.8.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "assert": "^2.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "eslint": "^8.39.0",
@@ -87,6 +93,36 @@
   "resolutions": {
     "metro": "^0.76.0",
     "metro-resolver": "^0.76.0"
+  },
+  "react-native": {
+    "crypto": "react-native-crypto",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "vm": "vm-browserify",
+    "os": "react-native-os",
+    "net": "react-native-tcp",
+    "fs": "react-native-level-fs"
+  },
+  "browser": {
+    "crypto": "react-native-crypto",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "vm": "vm-browserify",
+    "os": "react-native-os",
+    "net": "react-native-tcp",
+    "fs": "react-native-level-fs"
   },
   "overrides": {
     "metro": "^0.76.0",
