--- a/react-native/package.json
+++ b/react-native/package.json
@@ -46,6 +46,7 @@
     "expo-standard-web-crypto": "^1.5.0",
     "expo-status-bar": "^1.4.4",
     "lodash": "^4.17.21",
+    "lz-string": "^1.5.0",
     "patch-package": "^7.0.0",
     "qs": "^6.11.1",
     "react": "^18.2.0",
@@ -65,6 +66,7 @@
     "react-native-web": "~0.18.10",
     "react-qr-code": "^2.0.11",
     "react-redux": "^8.0.5",
+    "realm-web": "^2.0.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
