feat: added fixes from last night

--- a/react-native/package.json
+++ b/react-native/package.json
@@ -27,6 +27,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@reduxjs/toolkit": "^1.9.5",
     "@tradle/react-native-http": "^2.0.1",
+    "asyncstorage-down": "^4.2.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "base-64": "^1.0.0",
     "bignumber.js": "^9.1.1",
@@ -45,6 +46,7 @@
     "expo-splash-screen": "^0.18.2",
     "expo-standard-web-crypto": "^1.5.0",
     "expo-status-bar": "^1.4.4",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "patch-package": "^7.0.0",
